--- a/style.css
+++ b/style.css
@@ -68,3 +68,56 @@
     width: 20%;
     height: 50px;
 }
+
+/* -- DESKTOP -- */
+.headerDesk{
+    border-style: solid;
+    border-color: chartreuse;
+    width: 100%;
+    height: 80px;
+}
+
+.icoDesk{
+    border-style: solid;
+    width: 100%;
+    height: 50px;
+}
+.searchDesk{
+    border-style: solid;
+    width: 100%;
+    height: 50px;
+}
+/*  -- FIN HEADER   -- */
+
+/* --   CONTAINER   -- */
+.navs{
+    border-style: solid;
+    height: 250px;
+}
+
+.carrouselDesk{
+    border-style: solid;
+    height: 250px;
+}
+.btnNav{
+    border-style: solid;
+    width: 20%;
+    height: 50px;
+}
+
+/* --   FOOTER  -- */
+.footerDesk{
+    border-style: solid;   
+    border-color: chartreuse;
+    height: 120px;
+}
+.box{
+    border-style: solid;
+    height: 50px;
+}
+.reproductor{
+    border-style: solid;
+    border-color: rgb(0, 38, 253);
+    height: 50px;
+}
+
