--- a/css/style.css
+++ b/css/style.css
@@ -71,19 +71,22 @@
 
 /* -- DESKTOP -- */
 .headerDesk{
-    border-style: solid;
-    border-color: chartreuse;
+    /* border-style: solid; */
+    /* border-color: chartreuse; */
+    background-color: black;
     width: 100%;
     height: 80px;
 }
 
 .icoDesk{
     border-style: solid;
+    border-color: hotpink;
     width: 100%;
     height: 50px;
 }
 .searchDesk{
-    border-style: solid;
+    border-radius: 20px;
+    background-color: white;
     width: 100%;
     height: 50px;
 }
@@ -107,8 +110,7 @@
 
 /* --   FOOTER  -- */
 .footerDesk{
-    border-style: solid;   
-    border-color: chartreuse;
+    background-color: black;
     height: 120px;
 }
 .box{
@@ -136,3 +138,28 @@
     border-style: solid;
     border-color: rgb(0, 38, 253);
 }
+
+
+
+
+/* ------------     COLOURS     --------------- */
+.c-gray{
+    color: gray;
+}
+.c-lBlue{
+    color: #04cfd2;
+}
+.c-white{
+    color: white;
+}
+
+.colordebotones{
+    color: #b9b9b9;
+}
+
+.c-section{
+    color: #1b2829;
+}
+/* body{
+    background-color: #002526;
+} */
