--- a/css/style.css
+++ b/css/style.css
@@ -69,33 +69,44 @@
     height: 50px;
 }
 
-/* -- DESKTOP -- */
+/* -----------------------------    DESKTOP  ----------------------------- */
 .headerDesk{
     /* border-style: solid; */
     /* border-color: chartreuse; */
     background-color: black;
     width: 100%;
-    height: 10vh;
+    height: 9vh;
 }
 
-.icoDesk{
-    border-style: solid;
-    border-color: hotpink;
-    width: 100%;
-    height: 50px;
-}
 .searchDesk{
+    position: relative;
+    padding-left: 9%;
     border-radius: 20px;
     background-color: white;
     width: 100%;
-    height: 45px;
+    height: 50%;
 }
+.ajustarLupa{
+    position: absolute;
+    left: 4%;
+    top: 8%;
+    z-index: 1;
+}
+.p-user{
+    position: absolute;
+    font-size: 75%;
+    color: gray;
+    right: 6.7rem;
+}
+
 /*  -- FIN HEADER   -- */
 
 /* --   CONTAINER   -- */
 .navs{
-    border-style: solid;
-    height: 250px;
+    /* border-style: solid; */
+    background-color: #1b2829;
+    justify-content: center;
+    height: 24vh;
 }
 
 .carrouselDesk{
@@ -111,11 +122,8 @@
 /* --   FOOTER  -- */
 .footerDesk{
     background-color: black;
-    height: 20vh;
-}
-.box{
-    border-style: solid;
-    height: 50px;
+    height: 19vh;
+    margin-top: 1%;
 }
 .reproductor{
     /* border-style: solid; */
@@ -148,6 +156,26 @@
     height: 70vh;
 }
 
+.card{
+    background-color: transparent;
+    border: 0px;
+}
+
+
+/* -----    CARROUSEL   ---- */
+.previous{
+    display: flex;
+    justify-content: end;
+}
+.sr{
+    display: flex;
+    justify-content: end;  
+}
+
+.mr-6{
+    margin-right: 4rem;
+}
+/* -----    CARROUSEL   ---- */
 
 
 /* ------------     COLOURS     --------------- */
@@ -164,8 +192,12 @@
 .c-white{
     color: white;
 }
+.c-white2{
+    color: rgb(209, 209, 209);
+}
 
-.colordebotones{
+
+.c-ico{
     color: #b9b9b9;
 }
 
@@ -173,6 +205,6 @@
     color: #1b2829;
 }
 body{
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
     background-color: #002526;
 }
