--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,20 @@
 .container{
     height: 70vh;
     overflow-y: scroll;
+    /* scrollbar-color: red yellow; */
 }
+.container::-webkit-scrollbar{
+ width: 10px;
+ background: black;
+}
+.container::-webkit-scrollbar-thumb{
+    background: white;
+    border-radius: 10px;
+}
+
+
+    
+ 
 
 .card{
     background-color: transparent;
