trabajando en landing

--- a/css/index.css
+++ b/css/index.css
@@ -8,12 +8,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
-/*
-.row {
-    border: 1px solid white;
-    box-sizing: border-box;
-}
-*/
+
 /* -- Landing Header -- */
 
 .landing-header {
@@ -38,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 42vh;
 }
 
-#hero-mobile {
+#hero-logo {
     height: 90%;
 }
 
@@ -93,3 +88,18 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFFFFF;
 }
 
+/* Footer */
+
+.full-height {
+    height: 100%;
+}
+
+.align-full-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spoiler-logo {
+    height: 75%;
+}
