--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
     /* border-style: solid; */
     background-color: #1b2829;
     justify-content: center;
-    height: 24vh;
+    height: 25.33vh;
 }
 
 .carrouselDesk{
@@ -129,17 +129,10 @@
     background-color: gray;
     height: 10px;
 }
-.ocultar{
-display: none;
-}
-.mostrar{   
-display: block;
-}
-.btn-add-image{
-    background: transparent;
-    border: none;
-}
-
+/* .bottom{
+    position: relative;
+    top: 6rem;
+} */
 
 
 /* EXPLORAR DESKTOP */
