--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Segoe UI';
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
@@ -41,6 +41,32 @@ h1, h2, h3, h4, h5, h6 {
     height: 14vh;
 }
 
+.landing-description-row-desk {
+    height: 40%;
+}
+
+.landing-demo-button-row-desk {
+    height: 20%;
+}
+
+.landing-demo-text-row-desk {
+    height: 40%;
+}
+
+.landing-description-desk {
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 45px;
+    text-align: left;
+}
+
+/*
+.row {
+    border: 1px solid white;
+}
+*/
+
 .landing-description {
     color: white;
     font-weight: bold;
@@ -68,11 +94,18 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: lighter;
 }
 
+.demo-text-desktop {
+    color: #ECEFEF;
+    font-size: 30px;
+    text-align: left;
+    font-weight: lighter;
+}
+
 /* -- Landing Footer  -- */
 
 .landing-footer {
     height: 10vh;
-    background-color: #002526;
+    background-color: #040404;
 }
 
 .landing-footer .row {
@@ -88,7 +121,12 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFFFFF;
 }
 
-/* Footer */
+.follow-us-text {
+    color: #04CFD2;
+    font-size: 25px;
+}
+
+/* Footer end */
 
 .full-height {
     height: 100%;
@@ -103,3 +141,4 @@ h1, h2, h3, h4, h5, h6 {
 .spoiler-logo {
     height: 75%;
 }
+
