--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6, p {
 /* -- Landing Main Content -- */
 
 .landing-main {
-    height: 82vh;
+    height: 82%;
     background-color: #002526;
 }
 
