--- a/css/login.css
+++ b/css/login.css
@@ -5,8 +5,9 @@ label {
 
 .login-form-container {
     border: 1px solid #707070;
-    height: 80%;
     margin-top: 2em;
+
+    background-color: #1B2829;
 }
 
 .login-title-container {
@@ -18,8 +19,14 @@ label {
     padding-top: 1em;
 }
 
+.form-group-header-container {
+    color: rgb(163, 161, 161);
+    font-size: large;
+    margin-bottom: 0.5em;
+}
+
 .form-items-container {
-    margin-top: 2em;
+    margin-top: 1em;
     padding: 0 2em;
     flex-direction: column;
 }
@@ -28,8 +35,18 @@ label {
     margin-bottom: 1.2em;
 }
 
+.date-input-container {
+    margin-bottom: 0em;
+}
+
 .form-label {
+    font-size: larger;
     color: white;
+    font-weight: bold;
+}
+
+.form-label-radio {
+    color: gray;
     font-weight: bold;
 }
 
@@ -41,4 +58,21 @@ label {
   width: 100%;  
   height: 3em;
   padding-left: .5em;
+  
+}
+
+.date-select {
+    padding-left: .5em;
+    padding-right: .5em;
+    height: 3em;
+    width: 30%;
+}
+
+.radio-container {
+    margin-right: 2em;
+}
+
+.back-button {
+    margin-top: 2em;
+    margin-bottom: 7em;
 }
