Se agrego correciones del index, login, sign up con respecto al nav y footer. Tambien se agrego perfil.

--- a/css/biblioteca.css
+++ b/css/biblioteca.css
@@ -105,6 +105,10 @@
     color: gray;
     right: 6.7rem;
 }
+.title-nav{
+    background-color: #1b2829;
+    justify-content: center;
+}
 
 /*  -- FIN HEADER   -- */
 
