--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@
     right: 6.7rem;
 }
 
+.title-nav{
+    background-color: #1b2829;
+    justify-content: center;
+}
+
 /*  -- FIN HEADER   -- */
 
 /* --   CONTAINER   -- */
