--- a/css/perfil.css
+++ b/css/perfil.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6, p {
     z-index: 1;
 }
 
-.user-container {
+/* .user-container {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,20 @@ h1, h2, h3, h4, h5, h6, p {
 .p-user{
     font-size: 75%;
     color: gray;
-    right: 6.7rem;
+    margin-bottom: 2%; */
+    /* right: 6.7rem; */
+/* } */
+
+.max-h-w{
+    max-height: 25px;
+    max-width: 28px;
+}
+
+
+.span-user{
+    color: gray;
+    font-size: 11px;
+    font-weight: 700;
 }
 /*  -------------- FIN HEADER   ---------------- */
 
