--- a/css/configuracion.css
+++ b/css/configuracion.css
@@ -1,9 +1,49 @@
+/* ----------------------------     MOBILE      -------------------------- */
+.header-mob{
+    height: 9vh;
+    background-color: black;
+}
+.landing-title {
+    font-size: 28px;
+    font-weight: bold;
+    color: #04CFD2;
+}
 
-/* -----------------------------    DESKTOP  ----------------------------- */
+/* -------------    CONTAINER   --------- */
+.container-mob{
+    height: 81vh;
+    background-color: #002526;
+}
+
+
+/* -------------    FOOTER   --------- */
+.footer-mob{
+    height: 10vh;
+    background-color: black;
+}
+.max-h-w-mob{
+    max-height: 32px;
+    max-width: 32px;
+    height: 100%;
+    width: 100%;
+}
+.img-footer-mob{
+    max-height: 36px;
+    max-width: 36px;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+/* -----------------------------    DESKTOP     ----------------------------- */
 /* -- General -- */
-
 body {
     font-family: 'Segoe UI';
+    overflow-y: hidden;
+    background-color: #002526;
 }
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
@@ -81,7 +121,7 @@ h1, h2, h3, h4, h5, h6, p {
     color:  #04cfd2;
 }
 .ajustar-content{
-    left: 30%;
+    left: 26%;
 }
 .btnSwitch {
     position: relative;
@@ -155,7 +195,7 @@ input:checked + .slide:before {
     background-color: green;
 }
 /* ------------- FOOTER ------------ */
-.footer {
+.footer{
     height: 10vh;
     background-color: #040404;
 }
@@ -195,9 +235,6 @@ input:checked + .slide:before {
 .c-green{
     color: #48f05b;
 }
-body{
-    overflow-y: hidden;
-    background-color: #002526;
-}
+
 
 /* ------------------------------------------------- */
