Se agrego header y footer en la mayorias de las pag mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,49 @@
-/* --   NAV  --
+/* ------------------------ GENERAL ------------- */
+body {
+    font-family: 'Segoe UI';
+    overflow-y: hidden;
+    background-color: #002526;
+}
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
 
-
-/* ----------------------------     MOBILE      --------------------------- */
+/* ----------------------------     MOBILE      -------------------------- */
 .header-mob{
     height: 9vh;
     background-color: black;
 }
-
+.landing-title {
+    font-size: 28px;
+    font-weight: bold;
+    color: #04CFD2;
+}
+.ajustar-col{
+    width: 18rem;
+}
+/* -------------    CONTAINER   --------- */
 .container-mob{
     height: 81vh;
     background-color: #002526;
 }
 
+
+/* -------------    FOOTER   --------- */
 .footer-mob{
     height: 10vh;
     background-color: black;
 }
+.img-fot-head-mob{
+    max-height: 32px;
+    max-width: 32px;
+    /* width: 100%;
+    height: 100%; */
+}
+.p-small{
+    font-size: 15px;
+}
+
+
 
 
 /* -----------------------------    DESKTOP  ----------------------------- */
