--- a/css/configuracion.css
+++ b/css/configuracion.css
@@ -1,3 +1,13 @@
+/* ------------------------ GENERAL ------------- */
+body {
+    font-family: 'Segoe UI';
+    overflow-y: hidden;
+    background-color: #002526;
+}
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
 /* ----------------------------     MOBILE      -------------------------- */
 .header-mob{
     height: 9vh;
@@ -21,33 +31,21 @@
     height: 10vh;
     background-color: black;
 }
-.max-h-w-mob{
+.img-fot-head-mob{
     max-height: 32px;
     max-width: 32px;
-    height: 100%;
-    width: 100%;
-}
-.img-footer-mob{
-    max-height: 36px;
-    max-width: 36px;
     width: 100%;
     height: 100%;
 }
-
+.p-small{
+    font-size: 15px;
+}
 
 
 
 
 /* -----------------------------    DESKTOP     ----------------------------- */
-/* -- General -- */
-body {
-    font-family: 'Segoe UI';
-    overflow-y: hidden;
-    background-color: #002526;
-}
-h1, h2, h3, h4, h5, h6, p {
-    margin: 0;
-}
+
 /* ------------------- HEADER ---------------- */
 .headerDesk{
     height: 9vh;
