--- a/css/explorar.css
+++ b/css/explorar.css
@@ -1,73 +1,55 @@
-/* --   NAV  -- */
-.header{
-    border-style: solid;
-    width: 100%;
-    height: 70px;
+/* ------------------------ GENERAL ------------- */
+body {
+    font-family: 'Segoe UI';
+    overflow-y: hidden;
+    background-color: #002526;
 }
-.title{
-    border-style: solid;
-    width: 20%;
-    height: 40px;
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
 }
-.search{
-    border-style: solid;
-    width: 10%;
-    height: 40px;
-}
-.config{
-    border-style: solid;
-    width: 10%;
-    height: 40px;
-}
-/* --   FIN DE NAV  -- */
 
-/* --   CARROUSEL   -- */
-.carrousel{
-    border-style: solid;
-    width: 100%;
-    height: 234px;
+/* ----------------------------     MOBILE      -------------------------- */
+.header-mob{
+    height: 9vh;
+    background-color: black;
 }
-/* --   FIN DE CARROUSEL   -- */
-
-/* --   FOOTER  -- */
-.fot{
-    border-style: solid;
-    width: 100%;
-    height: 40px;
+.landing-title {
+    font-size: 28px;
+    font-weight: bold;
+    color: #04CFD2;
 }
-/* -- FIN FOOTER */
+.ajustar-col{
+    width: 18rem;
+} 
+.max-h-w-mob{
+    max-height: 32px;
+    max-width: 32px;
+}
+/* -------------    CONTAINER   --------- */
+.container-mob{
+    height: 81vh;
+    background-color: #002526;
+}
 
 
-/* --   EXPLORAR    -- */
-.back{
-    border-style: solid;
-    width: 10%;
-    height: 40px;
+/* -------------    FOOTER   --------- */
+.footer-mob{
+    height: 10vh;
+    background-color: black;
 }
-/* --   FIN EXPLORAR    -- */
+.img-fot-head-mob{
+    max-height: 32px;
+    max-width: 32px;
+    /* width: 100%;
+    height: 100%; */
+}
+.p-small{
+    font-size: 15px;
+}
 
 
-/* --   NOTIFICACIONES  -- */
-.not{
-    border-style: solid;
-    border-color: brown;
-    height: 70px;
-}
-.image{
-    border-style: solid;
-    width: 20%;
-    height: 50px;
-}
-.desc{
-    border-style: solid;
-    width: 60%;
-    height: 50px;
-}
-.logo{
-    border-style: solid;
-    width: 20%;
-    height: 50px;
-}
+
+
 
 /* -----------------------------    DESKTOP  ----------------------------- */
 .headerDesk{
@@ -242,8 +224,4 @@
 
 .c-section{
     color: #1b2829;
-}
-body{
-    overflow-y: hidden;
-    background-color: #002526;
 }
