--- a/css/editar-perfil.css
+++ b/css/editar-perfil.css
@@ -115,6 +115,18 @@ h1, h2, h3, h4, h5, h6, p {
 .title-row{
     margin-top: 30%;
 }
+.w-input{
+    width: 20rem;
+    height: 2.3rem;
+}
+.btn-cambios{
+    width: 100%;
+    background-color: #04CFD2;
+    border-radius: 2em;
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
 /* ------------- FOOTER ------------ */
 .footer {
     height: 10vh;
