--- a/css/result-busqueda.css
+++ b/css/result-busqueda.css
@@ -25,6 +25,9 @@ h1, h2, h3, h4, h5, h6, p {
 .container-mob{
     height: 81vh;
     background-color: #002526;
+    overflow-y: scroll;
+    width: auto;
+    white-space: nowrap;
 }
 .border-mob{
     border: 1px solid #04CFD2;
@@ -65,6 +68,36 @@ h1, h2, h3, h4, h5, h6, p {
 .mostrar{
     display: block;
 }
+.img-resultado{
+    border-radius: 5rem;
+    max-width: 8rem;
+    max-height: 8rem;
+}
+.ico-result-busqu{
+    max-height: 27px;
+    max-width: 27px;
+}
+.line{
+    width: 100%;
+    height: 2px;
+    background-color: white;
+}
+
+.carrousel-mob{
+    overflow-x: auto;
+}
+.card{
+    width: 100px;
+    height: 50px;
+    margin-right: 5rem;
+    padding: 0;
+    display: inline-block
+}
+.max-h-w-card{
+    max-height: 160px;
+    max-width: 160px;
+}
+
 /* -------------    FOOTER   --------- */
 .footer-mob{
     height: 10vh;
@@ -73,8 +106,6 @@ h1, h2, h3, h4, h5, h6, p {
 .img-fot-head-mob{
     max-height: 32px;
     max-width: 32px;
-    /* width: 100%;
-    height: 100%; */
 }
 .p-small{
     font-size: 15px;
