--- a/css/perfil.css
+++ b/css/perfil.css
@@ -29,9 +29,27 @@ h1, h2, h3, h4, h5, h6, p {
 .container-mob{
     height: 81vh;
     background-color: #002526;
+    overflow-y: scroll;
 }
-
-
+.img-perfil{
+    max-width: 80px;
+    max-height: 80px;
+    border-radius: 4rem;
+    border: 1px solid white;
+}
+.row-perfiles-mob{
+    background-color: #1b2829;
+    margin-right: 2%;
+    margin-left: 2%;
+    border: 1px solid white;
+}
+.max-ico{
+    max-height: 2.4rem;
+    max-width: 2.4rem;
+}
+.border-img{
+    border: 1px solid white;
+}
 /* -------------    FOOTER   --------- */
 .footer-mob{
     height: 10vh;
@@ -40,8 +58,7 @@ h1, h2, h3, h4, h5, h6, p {
 .img-fot-head-mob{
     max-height: 32px;
     max-width: 32px;
-    /* width: 100%;
-    height: 100%; */
+
 }
 .p-small{
     font-size: 15px;
@@ -100,7 +117,6 @@ h1, h2, h3, h4, h5, h6, p {
     border:3px solid black;
 }
 .img-artists{
-    border-radius: 80px;
     border:3px solid white;
     text-align: center;
 }
