--- a/css/editar-perfil.css
+++ b/css/editar-perfil.css
@@ -30,7 +30,31 @@ h1, h2, h3, h4, h5, h6, p {
     height: 81vh;
     background-color: #002526;
 }
-
+.img-perfil{
+    max-width: 80px;
+    max-height: 80px;
+    border-radius: 4rem;
+    border: 1px solid white;
+}
+.row-edit-perfil{
+    background-color: #1b2829;
+    margin-right: 5%;
+    margin-left: 5%;
+    border: 1px solid white;
+}
+.btn-cambios-mob{
+    width: 80%;
+    background-color: #04CFD2;
+    border-radius: 2em;
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+.form-input{
+        width: 100%;  
+        height: 3em;
+        padding-left: .5em;
+}
 
 /* -------------    FOOTER   --------- */
 .footer-mob{
