--- a/css/result-busqueda.css
+++ b/css/result-busqueda.css
@@ -69,7 +69,8 @@ h1, h2, h3, h4, h5, h6, p {
     display: block;
 }
 .img-resultado{
-    border-radius: 5rem;
+    /* border-radius: 5rem; */
+    border: 1px solid white;
     max-width: 8rem;
     max-height: 8rem;
 }
@@ -111,6 +112,164 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 15px;
 }
 
+/* -----------------------------    DESKTOP  ----------------------------- */
+.headerDesk{
+    /* border-style: solid; */
+    /* border-color: chartreuse; */
+    background-color: black;
+    width: 100%;
+    height: 9vh;
+}
+
+.searchDesk{
+    position: relative;
+    padding-left: 9%;
+    border-radius: 20px;
+    background-color: white;
+    width: 100%;
+    height: 50%;
+}
+.ajustarLupa{
+    position: absolute;
+    left: 4%;
+    z-index: 1;
+}
+
+
+.title-nav{
+    background-color: #1b2829;
+    justify-content: center;
+}
+
+.max-h-w{
+    max-height: 25px;
+    max-width: 28px;
+}
+
+
+.span-user{
+    color: gray;
+    font-size: 11px;
+    font-weight: 700;
+}
+
+/*  -- FIN HEADER   -- */
+
+/* --   CONTAINER   -- */
+.navs{
+    /* border-style: solid; */
+    background-color: #1b2829;
+    justify-content: center;
+    height: 25.33vh;
+}
+
+.carrouselDesk{
+    border-style: solid;
+    height: 250px;
+}
+.btnNav{
+    border-style: solid;
+    width: 20%;
+    height: 50px;
+}
+
+/* --   FOOTER  -- */
+.footerDesk{
+    background-color: black;
+    height: 22vh;
+}
+.reproductor{
+    /* border-style: solid; */
+    /* border-color: rgb(0, 38, 253); */
+    background-color: gray;
+    height: 10px;
+}
+/* .bottom{
+    position: relative;
+    top: 6rem;
+} */
+
+
+/* EXPLORAR DESKTOP */
+.carrouselExpl{
+    border-style: solid;
+    height: 25%;
+}
+
+.homeDesk {
+    height: 75vh;
+    overflow-y: scroll;
+}
+
+.homeDesk::-webkit-scrollbar{
+    width: 10px;
+    background: black;
+}
+
+.homeDesk::-webkit-scrollbar-thumb{
+    background: white;
+    border-radius: 10px;
+}
+
+.card{
+    background-color: transparent;
+    border: 0px;
+}
+
+.fixed{
+    position: fixed;
+    width: 14%;
+}
+.top-5-canciones{
+    background-color: black;
+    color: white;
+    width: 70%;
+    height: 3rem;
+    border: 1px solid white;
+}
+.canciones{
+    background-color: #1b2829;
+    color: white;
+    width: 70%;
+    height: 3rem;
+    border: 1px solid white;
+}
+.img-section{
+    max-width: 8rem;
+    max-height: 8rem;
+    border: 1px solid white;
+}
+/* -----    CARROUSEL   ---- */
+.previous{
+    display: flex;
+    justify-content: end;
+}
+.sr{
+    display: flex;
+    justify-content: end;  
+}
+
+.mr-6{
+    margin-right: 4rem;
+}
+.btnNexts{
+    width: 80%;
+}
+.card{
+    height: 30%;
+    width: 25%;
+}
+.ocultar{
+    display: none;
+}
+.mostrar{   
+    display: block;
+    }
+.btn-add-image{
+    background: transparent;
+    border: none;
+}
+/* -----    CARROUSEL   ---- */
 
 
 
