--- a/css/explorar.css
+++ b/css/explorar.css
@@ -161,10 +161,11 @@ h1, h2, h3, h4, h5, h6, p {
     background-color: gray;
     height: 10px;
 }
-/* .bottom{
-    position: relative;
-    top: 6rem;
-} */
+.img-play{
+    max-width: 50px;
+    max-height: 50px;
+}
+
 
 
 /* EXPLORAR DESKTOP */
@@ -231,6 +232,25 @@ h1, h2, h3, h4, h5, h6, p {
 }
 /* -----    CARROUSEL   ---- */
 
+/* --- CORAZON DE LIKE --- */
+.btn-like{
+    background-color: transparent;
+    display: inline-block;
+    height: 2%;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    width: 13%;
+    border: none;
+}
+.btn-like img{
+    display: block;
+    height: 24px;  
+    width: 24px;
+}
+.btn-like:focus{
+    outline: none;
+}
 
 /* ------------     COLOURS     --------------- */
 .img-fondo{
