--- a/css/reproductor.css
+++ b/css/reproductor.css
@@ -134,12 +134,13 @@ h1, h2, h3, h4, h5, h6, p {
     height: 22vh;
 }
 .reproductor{
-    /* border-style: solid; */
-    /* border-color: rgb(0, 38, 253); */
     background-color: gray;
     height: 10px;
 }
-
+.img-play{
+    max-width: 50px;
+    max-height: 50px;
+}
 
 /* EXPLORAR DESKTOP */
 .carrouselExpl{
@@ -203,7 +204,25 @@ h1, h2, h3, h4, h5, h6, p {
     border: none;
 }
 /* -----    CARROUSEL   ---- */
-
+/* --- CORAZON DE LIKE --- */
+.btn-like{
+    background-color: transparent;
+    display: inline-block;
+    height: 2%;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    width: 13%;
+    border: none;
+}
+.btn-like img{
+    display: block;
+    height: 24px;  
+    width: 24px;
+}
+.btn-like:focus{
+    outline: none;
+}
 /* ---    EFECTO 3D    --- */
 
 .efecto-hover:hover{
@@ -239,6 +258,27 @@ h1, h2, h3, h4, h5, h6, p {
     max-width: 2rem;
     max-height: 2rem;
 }
+
+/* --- BOTON DE AGREGAR A PLAYLIST --- */
+.dropdown-menu{
+    background-color: #063738;
+    color: white;
+    width: 12rem;
+    height: 12rem;
+    border: 4px solid  #04cfd2;
+}
+.border-b{
+    height: 2rem;
+    border-bottom: 1px solid  #04cfd2;
+}
+
+.left-playlist{
+    position: absolute;
+    right: 1rem;
+}
+/* --- FIN BOTON DE AGREGAR A PLAYLIST --- */
+
+
 /* ------------     COLOURS     --------------- */
 .load{
     background-color: white;
