--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,33 @@ h1, h2, h3, h4, h5, h6, p {
     font-weight: 700;
 }
 
+/* --- POP-UP NOTI --- */
+.add-list{
+    max-width: 2rem;
+    max-height: 2rem;
+}
+.dropdown-menu{
+    margin-right: 4rem;
+    background-color: #1b2829;
+    color: white;
+    width: 21rem;
+    height: 16rem;
+    border: 4px solid  #04cfd2;
+}
+.border-b{
+    height: 3rem;
+    border-bottom: 1px solid  #04cfd2;
+}
+.left-playlist{
+    position: absolute;
+    right: 1rem;
+}
+.dropdown-toggle::after{
+    color: transparent;
+}
+.dropdown-toggle{
+    width: 77%;
+}
 /*  -- FIN HEADER   -- */
 
 /* --   CONTAINER   -- */
@@ -253,8 +280,6 @@ h1, h2, h3, h4, h5, h6, p {
 .c-white2{
     color: rgb(209, 209, 209);
 }
-
-
 .c-ico{
     color: #b9b9b9;
 }
