--- a/css/reproductor.css
+++ b/css/reproductor.css
@@ -25,6 +25,11 @@ h1, h2, h3, h4, h5, h6, p {
 .right-ajust{
   right: 1.5rem;
 }
+.max-star{
+    max-width: 24px;
+    max-height: 24px;
+    margin-left: 3%;
+}
 /* -------------    CONTAINER   --------- */
 .container-mob{
     height: 81vh;
@@ -48,6 +53,32 @@ h1, h2, h3, h4, h5, h6, p {
     max-width: 160px;
 }
 
+.img-repro-mob{
+max-width: 100%;
+max-height: 100%;
+}
+.ico-repr{
+    max-width: 20px;
+    max-height: 20px;
+}
+.ico-play{
+    max-width: 50px;
+    max-height: 60px;
+    width: 44px;
+    height: 44px;
+}
+
+.line-gray{
+    position: relative;
+    width: 100%;
+    height: 6px;    
+    background-color: gray;
+}
+.line-white{
+    width: 60%;
+    height: 6px;
+    background-color: white;
+}
 /* -------------    FOOTER   --------- */
 .footer-mob{
     height: 10vh;
