Se agrego mejora en footer y efecto load en boton enviar comentario

--- a/css/reproductor.css
+++ b/css/reproductor.css
@@ -100,9 +100,14 @@ h1, h2, h3, h4, h5, h6, p {
 
 .max-h-w{
     max-height: 25px;
-    max-width: 28px;
+    max-width: 25px;
 }
 
+.span-user{
+    color: gray;
+    font-size: 11px;
+    font-weight: 700;
+}
 
 .user-name{
     color: gray;
@@ -169,7 +174,10 @@ h1, h2, h3, h4, h5, h6, p {
     max-width: 50px;
     max-height: 50px;
 }
-
+.sound{
+    position: absolute;
+    right: 1px;
+}
 /* EXPLORAR DESKTOP */
 .carrouselExpl{
     border-style: solid;
