--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 .max-h-w{
     max-height: 25px;
-    max-width: 28px;
+    max-width: 25px;
 }
+
 
 
 .span-user{
@@ -167,6 +168,10 @@ h1, h2, h3, h4, h5, h6, p {
 .img-play{
     max-width: 50px;
     max-height: 50px;
+}
+.sound{
+    position: absolute;
+    right: 1px;
 }
 
 /* EXPLORAR DESKTOP */
