--- a/css/result-busqueda.css
+++ b/css/result-busqueda.css
@@ -143,7 +143,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .max-h-w{
     max-height: 25px;
-    max-width: 28px;
+    max-width: 25px;
 }
 
 
@@ -184,11 +184,29 @@ h1, h2, h3, h4, h5, h6, p {
     background-color: gray;
     height: 10px;
 }
-/* .bottom{
-    position: relative;
-    top: 6rem;
-} */
-
+.sound{
+    position: absolute;
+    right: 1px;
+}
+/* --- CORAZON DE LIKE --- */
+.btn-like{
+    background-color: transparent;
+    display: inline-block;
+    height: 2%;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+    width: 13%;
+    border: none;
+}
+.btn-like img{
+    display: block;
+    height: 24px;  
+    width: 24px;
+}
+.btn-like:focus{
+    outline: none;
+}
 
 /* EXPLORAR DESKTOP */
 .carrouselExpl{
