se agregaron mejoras en footer y efecto load al enviar un comentario

--- a/css/biblioteca.css
+++ b/css/biblioteca.css
@@ -63,7 +63,10 @@ h1, h2, h3, h4, h5, h6, p {
 .p-small{
     font-size: 15px;
 }
-
+.sound{
+    position: absolute;
+    right: 1px;
+}
 
 /* --- REPRO MINI --- */
 .repro-h{
@@ -122,7 +125,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .max-h-w{
     max-height: 25px;
-    max-width: 28px;
+    max-width: 25px;
 }
 
 .span-user{
