--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .max-h-w{
     max-height: 25px;
-    max-width: 28px;
+    max-width: 25px;
 }
 
 
@@ -187,7 +187,10 @@ h1, h2, h3, h4, h5, h6, p {
     max-width: 50px;
     max-height: 50px;
 }
-
+.sound{
+    position: absolute;
+    right: 1px;
+}
 /* EXPLORAR DESKTOP */
 .carrouselExpl{
     border-style: solid;
