--- a/css/perfil.css
+++ b/css/perfil.css
@@ -110,6 +110,8 @@ h1, h2, h3, h4, h5, h6, p {
     position: absolute;
     left: 4%;
     z-index: 1;
+    max-height: 25px;
+    max-width: 25px;
 }
 .max-h-w{
     max-height: 25px;
