--- a/css/result-busqueda.css
+++ b/css/result-busqueda.css
@@ -133,8 +133,9 @@ h1, h2, h3, h4, h5, h6, p {
     position: absolute;
     left: 4%;
     z-index: 1;
+    max-height: 25px;
+    max-width: 25px;
 }
-
 
 .title-nav{
     background-color: #1b2829;
