--- a/css/explorar.css
+++ b/css/explorar.css
@@ -406,3 +406,16 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 
+
+.efecto-carrousel{
+    width: 98%;
+}
+/* ---    EFECTO 3D    --- */
+
+.efecto-carrousel:hover{
+  transition: ease 1s;
+  transform: translate3d(0.1ch, 0.1in, 0em);
+  box-shadow: 1px 1px 25px black;
+}
+
+/* ---   FIN EFECTO 3D    --- */
