--- a/css/style.css
+++ b/css/style.css
@@ -278,12 +278,17 @@ h1, h2, h3, h4, h5, h6, p {
 }
 /* -----    CARROUSEL   ---- */
 
+    .efecto-carrousel{
+        width: 98%;
+    }
 /* ---    EFECTO 3D    --- */
-.efecto-hover:hover{
-    transition: 1s;
-    transform: perspective(2000px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translateX(0px) translateY(0px) translateZ(80px);
-    box-shadow: 1px 1px 15px white;
+
+    .efecto-carrousel:hover{
+      transition: ease 1s;
+      transform: translate3d(0.1ch, 0.1in, 0em);
+      box-shadow: 1px 1px 25px black;
 }
+
 /* ---   FIN EFECTO 3D    --- */
 
 
@@ -341,3 +346,4 @@ body{
     color: black;
     cursor: pointer;
 }
+
