--- a/css/vote.css
+++ b/css/vote.css
@@ -13,7 +13,7 @@
         transform: scale(1);
     }
     50% {
-        transform: scale(2);
+    transform: translate3d(5ch, 0.1in, 5em);
     }
     100% {
         transform: scale(1);
